--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "packages/*"
   ],
   "devDependencies": {
-    "lerna": "^6.5.1"
+    "lerna": "^6.5.1",
+    "typescript": "^5.0.0-beta"
   }
 }
