--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,13 @@
     "paths": {
       "@aedart/*": ["packages/*/src"]
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
+    "include": [
+      "packages/*/src"
+    ],
+    "exclude": [
+      "node_modules",
+      "dist"
+    ],
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
