--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-typescript": "^11.0.0",
     "lerna": "^6.5.1",
-    "typescript": "^5.0.0-beta"
+    "rollup": "^3.18.0",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.5"
   }
 }
