Replace official rollup typescript plugin
The output path of types was really frustrating. Despite following the official docs' recommendation, it couldn't resolve it. However, the custom typescript-2 plugin appears to work just fine, in that regards.

--- a/packages/xyz/tsconfig.json
+++ b/packages/xyz/tsconfig.json
@@ -1,13 +1,7 @@
 {
   "extends": "../../shared/tsconfig.json",
-  "include": ["src/**/*"],
-  "exclude": ["dist"],
   "compilerOptions": {
     "rootDir": "./src",
-
-//    "outDir": "dist",
-    "declaration": true,
-//    "declarationDir": "./../../" // WTF...
-    "declarationDir": "types"
+    "declarationDir": "./dist/types"
   }
 }
