--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-replace": "^5.0.2",
-    "@rollup/plugin-typescript": "^11.0.0",
     "lerna": "^6.5.1",
     "rollup": "^3.18.0",
+    "rollup-plugin-typescript2": "^0.34.1",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5"
   },
