--- a/packages/xyz/tsconfig.json
+++ b/packages/xyz/tsconfig.json
@@ -2,6 +2,6 @@
   "extends": "../../shared/tsconfig.json",
   "compilerOptions": {
     "rootDir": "./src",
-    "declarationDir": "./dist/types"
+    "declarationDir": "./dist/tmp"
   }
 }
