--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -34,7 +34,7 @@
     /* Specify what module code is generated. */
     "rootDir": "./",
     /* Specify the root folder within your source files. */
-    "moduleResolution": "nodenext",
+    // "moduleResolution": "nodenext",
     /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./",
     /* Specify the base directory to resolve non-relative module names. */
