Cache test and test-dev

--- a/nx.json
+++ b/nx.json
@@ -5,7 +5,9 @@
       "options": {
         "cacheableOperations": [
           "build",
-          "compile"
+          "compile",
+          "test",
+          "test-dev"
         ]
       }
     }
