Add tslib as peer dependency

--- a/packages/xyz/package.json
+++ b/packages/xyz/package.json
@@ -42,6 +42,9 @@
     "dist",
     "!dist/**/*.map"
   ],
+  "peerDependencies": {
+    "tslib": "^2.5.0"
+  },
   "scripts": {
     "compile": "rollup -c",
     "watch": "rollup -c -w"
