--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "clean": "lerna clean",
     "build": "lerna run compile",
     "compile": "lerna run compile",
+    "cache:clear": "npx nx reset",
     "watch": "lerna run watch",
     "test": "lerna run compile && karma start shared/tests/karma-production.conf.js",
     "test-dev": "lerna run compile && karma start shared/tests/karma-development.conf.js"
