--- a/babel.config.json
+++ b/babel.config.json
@@ -7,5 +7,9 @@
         "corejs": "3.22"
       }
     ]
+  ],
+  "plugins": [
+    ["@babel/plugin-proposal-decorators", { "version": "2023-01" }],
+    "@babel/plugin-proposal-class-properties"
   ]
 }
