--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-replace": "^5.0.2",
+    "@vuepress/plugin-back-to-top": "^2.0.0-beta.61",
+    "@vuepress/plugin-search": "^2.0.0-beta.61",
     "babel-loader": "^9.1.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
+    "install": "^0.13.0",
     "jasmine": "^4.5.0",
     "karma": "^6.4.1",
     "karma-chrome-launcher": "^3.1.1",
@@ -40,6 +43,7 @@
     "karma-spec-reporter": "^0.0.36",
     "karma-webpack": "^5.0.0",
     "lerna": "^6.5.1",
+    "npm": "^9.6.2",
     "prettier": "^2.8.4",
     "puppeteer": "^19.7.4",
     "rollup": "^3.18.0",
