--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-replace": "^5.0.2",
-    "@vuepress/plugin-back-to-top": "^2.0.0-beta.61",
-    "@vuepress/plugin-search": "^2.0.0-beta.61",
+    "@vuepress/plugin-back-to-top": "2.0.0-beta.61",
+    "@vuepress/plugin-search": "2.0.0-beta.61",
     "babel-loader": "^9.1.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
@@ -55,7 +55,7 @@
     "style-loader": "^3.3.1",
     "tslib": "^2.5.0",
     "typescript": "^5.0.2",
-    "vuepress": "^2.0.0-beta.61",
+    "vuepress": "2.0.0-beta.61",
     "webpack": "^5.76.1",
     "webpack-cli": "^5.0.1"
   },
