--- a/packages/xyz/package.json
+++ b/packages/xyz/package.json
@@ -24,22 +24,22 @@
   "exports": {
     ".": {
       "types": "./dist/types/xyz.d.ts",
-      "import": "./dist/es/xyz.js",
+      "import": "./dist/esm/xyz.js",
       "require": "./dist/cjs/xyz.cjs"
     },
     "./submodule_a": {
       "types": "./dist/types/submodule_a.d.ts",
-      "import": "./dist/es/submodule_a.js",
+      "import": "./dist/esm/submodule_a.js",
       "require": "./dist/cjs/submodule_a.cjs"
     },
     "./submodule_b": {
       "types": "./dist/types/submodule_b.d.ts",
-      "import": "./dist/es/submodule_b.js",
+      "import": "./dist/esm/submodule_b.js",
       "require": "./dist/cjs/submodule_b.cjs"
     },
     "./decorator": {
       "types": "./dist/types/decorator.d.ts",
-      "import": "./dist/es/decorator.js",
+      "import": "./dist/esm/decorator.js",
       "require": "./dist/cjs/decorator.cjs"
     }
   },
