--- a/packages/vuepress-utils/package.json
+++ b/packages/vuepress-utils/package.json
@@ -33,6 +33,8 @@
     "!dist/**/*.map"
   ],
   "peerDependencies": {
+    "vuepress": "^2.0.0-beta.61",
+    "luxon": "^3.3.0",
     "tslib": "^2.5.0"
   },
   "scripts": {
