Export contracts for vuepress utils
Despite the plan to create a custom package only with interfaces and symbol identifiers, this package is intended to be more detached from the rest of the upcoming packages.

--- a/packages/vuepress-utils/package.json
+++ b/packages/vuepress-utils/package.json
@@ -26,6 +26,11 @@
       "types": "./dist/types/vuepress-utils.d.ts",
       "import": "./dist/esm/vuepress-utils.js",
       "require": "./dist/cjs/vuepress-utils.cjs"
+    },
+    "./contracts": {
+      "types": "./dist/types/contracts.d.ts",
+      "import": "./dist/esm/contracts.js",
+      "require": "./dist/cjs/contracts.cjs"
     }
   },
   "files": [
