Change root package name
In case that "/ion" ever gets to become a package on its own.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@aedart/ion",
-  "description": "Mono-repo for JS / TS packages",
+  "name": "@aedart/ion-monorepo",
+  "description": "Monorepo for JS / TS packages",
   "keywords": [
     "Ion",
     "Library"
