--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,11 +36,14 @@
     /* Specify the root folder within your source files. */
     "moduleResolution": "nodenext",
     /* Specify how TypeScript looks up a file from a given module specifier. */
-    "baseUrl": "./",
+    "baseUrl": ".",
     /* Specify the base directory to resolve non-relative module names. */
     "paths": {
+      "@aedart/vuepress-utils/*": [
+        "./packages/vuepress-utils/src/*"
+      ],
       "@aedart/*": [
-        "packages/*/src"
+        "./packages/*/src"
       ]
     },
     /* Specify a set of entries that re-map imports to additional lookup locations. */
