--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,10 +32,8 @@
     /* Modules */
     "module": "ESNext",
     /* Specify what module code is generated. */
-    "rootDir": "./",
-    /* Specify the root folder within your source files. */
-    "moduleResolution": "nodenext",
-    /* Specify how TypeScript looks up a file from a given module specifier. */
+    "rootDir": "./",                                     /* Specify the root folder within your source files. */
+    "moduleResolution": "bundler",                      /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": ".",
     /* Specify the base directory to resolve non-relative module names. */
     "paths": {
