--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-replace": "^5.0.2",
+    "@vue/server-renderer": "^3.2.47",
     "@vuepress/plugin-back-to-top": "2.0.0-beta.61",
     "@vuepress/plugin-search": "2.0.0-beta.61",
     "babel-loader": "^9.1.2",
+    "cpx2": "^4.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "install": "^0.13.0",
@@ -49,8 +51,9 @@
     "rollup": "^3.18.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-scss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.34.1",
-    "sass": "^1.59.2",
+    "rollup-plugin-vue": "^6.0.0",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "tslib": "^2.5.0",
