--- a/packages/vuepress-utils/package.json
+++ b/packages/vuepress-utils/package.json
@@ -37,19 +37,21 @@
       "types": "./dist/types/navigation.d.ts",
       "import": "./dist/esm/navigation.js",
       "require": "./dist/cjs/navigation.cjs"
-    }
+    },
+    "./components": "./dist/components/*"
   },
   "files": [
     "dist",
     "!dist/**/*.map"
   ],
   "peerDependencies": {
+    "vue": "^3.2.47",
     "vuepress": "^2.0.0-beta.61",
     "luxon": "^3.3.0",
     "tslib": "^2.5.0"
   },
   "scripts": {
-    "compile": "rollup -c",
+    "compile": "rollup -c && npx cpx \"src/components/*.vue\" dist/components",
     "watch": "rollup -c -w"
   }
 }
