--- a/packages/vuepress-utils/package.json
+++ b/packages/vuepress-utils/package.json
@@ -48,6 +48,7 @@
     "vue": "^3.2.47",
     "vuepress": "^2.0.0-beta.61",
     "luxon": "^3.3.0",
+    "@types/luxon": "^3.2.0",
     "tslib": "^2.5.0"
   },
   "scripts": {
