Fix homepage url

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "bugs": {
     "url": "https://github.com/aedart/ion/issues"
   },
-  "homepage": "https://github.com/aedart/ion#readme",
+  "homepage": "https://aedart.github.io/ion/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aedart/ion.git"
