--- a/packages/xyz/package.json
+++ b/packages/xyz/package.json
@@ -8,7 +8,7 @@
   ],
   "author": "Alin Eugen Deac <aedart@gmail.com>",
   "license": "BSD-3-Clause",
-  "homepage": "https://github.com/aedart/ion/tree/main/packages/xyz#readme",
+  "homepage": "https://aedart.github.io/ion/",
   "bugs": {
     "url": "https://github.com/aedart/ion/issues"
   },
