--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,9 @@
     "baseUrl": ".",
     /* Specify the base directory to resolve non-relative module names. */
     "paths": {
+      "@aedart/contracts/*": [
+        "./packages/contracts/src/*"
+      ],
       "@aedart/vuepress-utils/*": [
         "./packages/vuepress-utils/src/*"
       ],
