Add eslint for typescript

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-replace": "^5.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "@vue/server-renderer": "^3.2.47",
     "@vuepress/plugin-back-to-top": "2.0.0-beta.61",
     "@vuepress/plugin-search": "2.0.0-beta.61",
@@ -36,6 +38,7 @@
     "cpx2": "^4.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
+    "eslint": "^8.37.0",
     "install": "^0.13.0",
     "jasmine": "^4.5.0",
     "karma": "^6.4.1",
