--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -59,6 +59,9 @@ jobs:
     
             - name: "Install dependencies"
               run: npm install
+
+            - name: "Lint"
+              run: npm run lint
         
             - name: "Test"
               run: npm run test
