Change ts setup
This was an attempt to make project references work. Sadly, I needed to disable the "diagnostic check" for the typescript rollup plugin, or typescript would throw an error about "@aedart/contracts" not being under the same rootDir as the reflections package source.

--- a/packages/contracts/tsconfig.json
+++ b/packages/contracts/tsconfig.json
@@ -2,6 +2,11 @@
   "extends": "../../shared/tsconfig.json",
   "compilerOptions": {
     "rootDir": "./src",
-    "declarationDir": "./dist/tmp"
-  }
+    "declarationDir": "./dist/tmp",
+    "composite": true
+  },
+  "include": [
+    "./src/**/*"
+  ],
+  "references": []
 }
