--- a/packages/xyz/tsconfig.json
+++ b/packages/xyz/tsconfig.json
@@ -3,5 +3,8 @@
   "compilerOptions": {
     "rootDir": "./src",
     "declarationDir": "./dist/tmp"
-  }
+  },
+  "include": [
+    "./src/*"
+  ]
 }
