--- a/packages/reflections/tsconfig.json
+++ b/packages/reflections/tsconfig.json
@@ -2,6 +2,13 @@
   "extends": "../../shared/tsconfig.json",
   "compilerOptions": {
     "rootDir": "./src",
-    "declarationDir": "./dist/tmp"
-  }
+    "declarationDir": "./dist/tmp",
+    "composite": true,
+  },
+  "include": [
+    "./src/**/*",
+  ],
+  "references": [
+    { "path": "../contracts", "prepend": false }
+  ]
 }
