--- a/packages/vuepress-utils/tsconfig.json
+++ b/packages/vuepress-utils/tsconfig.json
@@ -2,6 +2,11 @@
   "extends": "../../shared/tsconfig.json",
   "compilerOptions": {
     "rootDir": "./src",
-    "declarationDir": "./dist/tmp"
-  }
+    "declarationDir": "./dist/tmp",
+    "module": "esnext"
+  },
+  "include": [
+    "./src/*",
+    "./src/**/*"
+  ]
 }
