--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,15 +30,18 @@
     // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
 
     /* Modules */
-    "module": "ESNext",
+    "module": "esnext",
     /* Specify what module code is generated. */
-    "rootDir": "./",                                     /* Specify the root folder within your source files. */
+    "rootDir": ".",                                     /* Specify the root folder within your source files. */
     "moduleResolution": "bundler",                      /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": ".",
     /* Specify the base directory to resolve non-relative module names. */
     "paths": {
       "@aedart/contracts/*": [
         "./packages/contracts/src/*"
+      ],
+      "@aedart/reflections/*": [
+        "./packages/reflections/src/*"
       ],
       "@aedart/vuepress-utils/*": [
         "./packages/vuepress-utils/src/*"
@@ -67,8 +70,8 @@
     // "maxNodeModuleJsDepth": 1,                        /* Specify the maximum folder depth used for checking JavaScript files from 'node_modules'. Only applicable with 'allowJs'. */
 
     /* Emit */
-    // "declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
-    // "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
+    "declaration": true,                                 /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
+    "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
     // "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
     // "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
     // "inlineSourceMap": true,                          /* Include sourcemap files inside the emitted JavaScript. */
@@ -94,7 +97,7 @@
     // "preserveValueImports": true,                     /* Preserve unused imported values in the JavaScript output that would otherwise be removed. */
 
     /* Interop Constraints */
-    // "isolatedModules": true,                          /* Ensure that each file can be safely transpiled without relying on other imports. */
+     "isolatedModules": true,                          /* Ensure that each file can be safely transpiled without relying on other imports. */
     // "verbatimModuleSyntax": true,                     /* Do not transform or elide any imports or exports not marked as type-only, ensuring they are written in the output file's format based on the 'module' setting. */
     // "allowSyntheticDefaultImports": true,             /* Allow 'import x from y' when a module doesn't have a default export. */
     "esModuleInterop": true,
@@ -126,12 +129,17 @@
     // "allowUnreachableCode": true,                     /* Disable error reporting for unreachable code. */
 
     /* Completeness */
-    // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true
-    /* Skip type checking all .d.ts files. */
+    "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
+    "skipLibCheck": true                              /* Skip type checking all .d.ts files. */
   },
   "exclude": [
     "dist",
     "node_modules"
+  ],
+  "references": [
+    { "path": "./packages/contracts" },
+    { "path": "./packages/reflections" },
+    { "path": "./packages/vuepress-utils" },
+    { "path": "./packages/xyz" },
   ]
 }
