--- a/packages/reflections/package.json
+++ b/packages/reflections/package.json
@@ -34,7 +34,9 @@
     "!dist/**/*.map"
   ],
   "peerDependencies": {
-    "@aedart/contracts": "*"
+    "@aedart/contracts": "*",
+    "lodash-es": "^4.17.21",
+    "@types/lodash-es": "^4.17.7"
   },
   "scripts": {
     "compile": "rollup -c",
