--- a/packages/support/package.json
+++ b/packages/support/package.json
@@ -46,5 +46,6 @@
   "scripts": {
     "compile": "rollup -c",
     "watch": "rollup -c -w"
-  }
+  },
+  "gitHead": "583d409bd9f72928584b34ff5d189e91d054172c"
 }
