--- a/packages/support/package.json
+++ b/packages/support/package.json
@@ -1,51 +1,56 @@
 {
-  "name": "@aedart/support",
-  "version": "0.3.1",
-  "description": "The Ion support package",
-  "keywords": [
-    "Support",
-    "Utilities"
-  ],
-  "author": "Alin Eugen Deac <aedart@gmail.com>",
-  "license": "BSD-3-Clause",
-  "homepage": "https://aedart.github.io/ion/",
-  "bugs": {
-    "url": "https://github.com/aedart/ion/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aedart/ion.git",
-    "directory": "packages/support"
-  },
-  "private": false,
-  "publishConfig": {
-    "access": "public"
-  },
-  "type": "module",
-  "exports": {
-    ".": {
-      "types": "./dist/types/support.d.ts",
-      "import": "./dist/esm/support.js",
-      "require": "./dist/cjs/support.cjs"
+    "name": "@aedart/support",
+    "version": "0.3.1",
+    "description": "The Ion support package",
+    "keywords": [
+        "Support",
+        "Utilities"
+    ],
+    "author": "Alin Eugen Deac <aedart@gmail.com>",
+    "license": "BSD-3-Clause",
+    "homepage": "https://aedart.github.io/ion/",
+    "bugs": {
+        "url": "https://github.com/aedart/ion/issues"
     },
-    "./objects": {
-      "types": "./dist/types/objects.d.ts",
-      "import": "./dist/esm/objects.js",
-      "require": "./dist/cjs/objects.cjs"
-    }
-  },
-  "files": [
-    "dist",
-    "!dist/**/*.map"
-  ],
-  "peerDependencies": {
-    "@aedart/contracts": "*",
-    "@types/lodash-es": "^4.17.7",
-    "lodash-es": "^4.17.21"
-  },
-  "scripts": {
-    "compile": "rollup -c",
-    "watch": "rollup -c -w"
-  },
-  "gitHead": "f95135ecffa5df989150e11f6e5c0432960cc4b7"
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/aedart/ion.git",
+        "directory": "packages/support"
+    },
+    "private": false,
+    "publishConfig": {
+        "access": "public"
+    },
+    "type": "module",
+    "exports": {
+        ".": {
+            "types": "./dist/types/support.d.ts",
+            "import": "./dist/esm/support.js",
+            "require": "./dist/cjs/support.cjs"
+        },
+        "./misc": {
+            "types": "./dist/types/misc.d.ts",
+            "import": "./dist/esm/misc.js",
+            "require": "./dist/cjs/misc.cjs"
+        },
+        "./objects": {
+            "types": "./dist/types/objects.d.ts",
+            "import": "./dist/esm/objects.js",
+            "require": "./dist/cjs/objects.cjs"
+        }
+    },
+    "files": [
+        "dist",
+        "!dist/**/*.map"
+    ],
+    "peerDependencies": {
+        "@aedart/contracts": "*",
+        "@types/lodash-es": "^4.17.7",
+        "lodash-es": "^4.17.21"
+    },
+    "scripts": {
+        "compile": "rollup -c",
+        "watch": "rollup -c -w"
+    },
+    "gitHead": "f95135ecffa5df989150e11f6e5c0432960cc4b7"
 }
