--- a/packages/xyz/package.json
+++ b/packages/xyz/package.json
@@ -1,58 +1,59 @@
 {
-  "name": "@aedart/xyz",
-  "version": "0.0.0",
-  "description": "A private package used for testing, examples and tinkering",
-  "keywords": [
-    "Tests",
-    "Examples"
-  ],
-  "author": "Alin Eugen Deac <aedart@gmail.com>",
-  "license": "BSD-3-Clause",
-  "homepage": "https://aedart.github.io/ion/",
-  "bugs": {
-    "url": "https://github.com/aedart/ion/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aedart/ion.git",
-    "directory": "packages/xyz"
-  },
-  "private": true,
-  "publishConfig": {
-    "access": "public"
-  },
-  "type": "module",
-  "exports": {
-    ".": {
-      "types": "./dist/types/xyz.d.ts",
-      "import": "./dist/esm/xyz.js",
-      "require": "./dist/cjs/xyz.cjs"
+    "name": "@aedart/xyz",
+    "version": "0.0.0",
+    "description": "A private package used for testing, examples and tinkering",
+    "keywords": [
+        "Tests",
+        "Examples"
+    ],
+    "author": "Alin Eugen Deac <aedart@gmail.com>",
+    "license": "BSD-3-Clause",
+    "homepage": "https://aedart.github.io/ion/",
+    "bugs": {
+        "url": "https://github.com/aedart/ion/issues"
     },
-    "./submodule_a": {
-      "types": "./dist/types/submodule_a.d.ts",
-      "import": "./dist/esm/submodule_a.js",
-      "require": "./dist/cjs/submodule_a.cjs"
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/aedart/ion.git",
+        "directory": "packages/xyz"
     },
-    "./submodule_b": {
-      "types": "./dist/types/submodule_b.d.ts",
-      "import": "./dist/esm/submodule_b.js",
-      "require": "./dist/cjs/submodule_b.cjs"
+    "private": true,
+    "publishConfig": {
+        "access": "public"
     },
-    "./decorator": {
-      "types": "./dist/types/decorator.d.ts",
-      "import": "./dist/esm/decorator.js",
-      "require": "./dist/cjs/decorator.cjs"
-    }
-  },
-  "files": [
-    "dist",
-    "!dist/**/*.map"
-  ],
-  "peerDependencies": {
-    "tslib": "^2.5.0"
-  },
-  "scripts": {
-    "compile": "rollup -c",
-    "watch": "rollup -c -w"
-  }
+    "type": "module",
+    "exports": {
+        ".": {
+            "types": "./dist/types/xyz.d.ts",
+            "import": "./dist/esm/xyz.js",
+            "require": "./dist/cjs/xyz.cjs"
+        },
+        "./submodule_a": {
+            "types": "./dist/types/submodule_a.d.ts",
+            "import": "./dist/esm/submodule_a.js",
+            "require": "./dist/cjs/submodule_a.cjs"
+        },
+        "./submodule_b": {
+            "types": "./dist/types/submodule_b.d.ts",
+            "import": "./dist/esm/submodule_b.js",
+            "require": "./dist/cjs/submodule_b.cjs"
+        },
+        "./decorator": {
+            "types": "./dist/types/decorator.d.ts",
+            "import": "./dist/esm/decorator.js",
+            "require": "./dist/cjs/decorator.cjs"
+        }
+    },
+    "files": [
+        "dist",
+        "!dist/**/*.map"
+    ],
+    "peerDependencies": {
+        "tslib": "^2.5.0"
+    },
+    "scripts": {
+        "compile": "rollup -c",
+        "watch": "rollup -c -w"
+    },
+    "sideEffects": false
 }
