--- a/lerna.json
+++ b/lerna.json
@@ -1,19 +1,20 @@
 {
-  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "useWorkspaces": true,
-  "version": "0.4.0",
-  "command": {
-    "version": {
-      "allowBranch": "main",
-      "conventionalCommits": false,
-      "message": "Release of v%v"
-    },
-    "publish": {
-      "message": "Publish %v"
-    },
-    "create": {
-      "homepage": "https://github.com/aedart/ion",
-      "license": "BSD-3-Clause"
+    "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+    "useWorkspaces": true,
+    "version": "0.4.0",
+    "command": {
+        "version": {
+            "allowBranch": "main",
+            "conventionalCommits": false,
+            "message": "Release of v%v"
+        },
+        "publish": {
+            "message": "Publish %v",
+            "graphType": "all"
+        },
+        "create": {
+            "homepage": "https://github.com/aedart/ion",
+            "license": "BSD-3-Clause"
+        }
     }
-  }
 }
