--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
+    "@lerna-lite/run": "^1.17.0",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -47,7 +48,6 @@
     "karma-jasmine": "^5.1.0",
     "karma-spec-reporter": "^0.0.36",
     "karma-webpack": "^5.0.0",
-    "lerna": "^6.5.1",
     "npm": "^9.6.2",
     "prettier": "^2.8.4",
     "puppeteer": "^19.7.4",
