--- a/lerna.json
+++ b/lerna.json
@@ -1,11 +1,15 @@
 {
     "$schema": "node_modules/@lerna-lite/cli/schemas/lerna-schema.json",
     "useWorkspaces": true,
+    "packages": [
+        "packages/*"
+    ],
     "version": "0.4.0",
     "command": {
         "version": {
-            "allowBranch": "main",
+            "allowBranch": ["main", "replace-lerna"],
             "conventionalCommits": false,
+            "allowPeerDependenciesUpdate": true,
             "message": "Release of v%v"
         },
         "publish": {
