--- a/packages/support/package.json
+++ b/packages/support/package.json
@@ -44,7 +44,7 @@
         "!dist/**/*.map"
     ],
     "peerDependencies": {
-        "@aedart/contracts": "*",
+        "@aedart/contracts": "^0.4.0",
         "@types/lodash-es": "^4.17.7",
         "lodash-es": "^4.17.21"
     },
