--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
+    "@lerna-lite/changed": "^1.17.0",
     "@lerna-lite/cli": "^1.17.0",
+    "@lerna-lite/list": "^1.17.0",
     "@lerna-lite/run": "^1.17.0",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "^6.0.0",
