--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,11 @@
 {
     "$schema": "node_modules/@lerna-lite/cli/schemas/lerna-schema.json",
+    "version": "0.4.0",
+    "useNx": true,
     "useWorkspaces": true,
     "packages": [
         "packages/*"
     ],
-    "version": "0.4.0",
     "command": {
         "version": {
             "allowBranch": ["main", "replace-lerna"],
