Add support submodule for contracts

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -30,6 +30,11 @@
             "types": "./dist/types/contracts.d.ts",
             "import": "./dist/esm/contracts.js",
             "require": "./dist/cjs/contracts.cjs"
+        },
+        "./support": {
+            "types": "./dist/types/support.d.ts",
+            "import": "./dist/esm/support.js",
+            "require": "./dist/cjs/support.cjs"
         }
     },
     "files": [
