Add support/meta submodule

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -35,6 +35,11 @@
             "types": "./dist/types/support.d.ts",
             "import": "./dist/esm/support.js",
             "require": "./dist/cjs/support.cjs"
+        },
+        "./support/meta": {
+            "types": "./dist/types/support/meta.d.ts",
+            "import": "./dist/esm/support/meta.js",
+            "require": "./dist/cjs/support/meta.cjs"
         }
     },
     "files": [
