Ignore *d.ts and *.d.ts.map in src directories
This might be some leftover from attempting to use "references" setup

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ tsconfig.tsbuildinfo
 .tsbuildinfo
 
 packages/*/dist/*
+/packages/*/src/**/*.d.ts
+/packages/*/src/**/*.d.ts.map
 
 # Vuepress
 docs/.vuepress/.temp
