Fix incorrect call to clean script
Also added clean script for tests

--- a/package.json
+++ b/package.json
@@ -72,13 +72,13 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "clean": "lerna clean && sh clean.sh",
-    "build": "lerna run compile sh clean.sh",
+    "build": "lerna run compile && sh clean.sh",
     "compile": "lerna run compile && sh clean.sh",
     "cache:clear": "npx nx reset",
     "watch": "lerna run watch",
     "lint": "eslint .",
-    "test": "lerna run compile && karma start shared/tests/karma-development.conf.js",
-    "test:prod": "lerna run compile && karma start shared/tests/karma-production.conf.js",
+    "test": "lerna run compile && sh clean.sh && karma start shared/tests/karma-development.conf.js",
+    "test:prod": "lerna run compile && sh clean.sh && karma start shared/tests/karma-production.conf.js",
     "docs:dev": "cross-env NODE_ENV=development vuepress dev docs --config docs/.vuepress/config.ts",
     "docs:build": "cross-env NODE_ENV=development vuepress build docs --config docs/.vuepress/config.ts",
     "docs:build-prod": "cross-env NODE_ENV=production vuepress build docs --config docs/.vuepress/config.ts"
