--- a/babel.config.json
+++ b/babel.config.json
@@ -10,6 +10,7 @@
   ],
   "plugins": [
     ["@babel/plugin-proposal-decorators", { "version": "2023-01" }],
-    "@babel/plugin-proposal-class-properties"
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-private-methods"
   ]
 }
