Deprecate entire reflections package
Reflection utilities will, for now at least, be added directly into the support package, so that circular dependencies can be prevented - e.g. a possible future port of the "callback reference", which could benefit from reflections.

--- a/packages/reflections/package.json
+++ b/packages/reflections/package.json
@@ -18,7 +18,7 @@
         "url": "git+https://github.com/aedart/ion.git",
         "directory": "packages/reflections"
     },
-    "private": false,
+    "private": true,
     "publishConfig": {
         "access": "public"
     },
