--- a/packages/support/package.json
+++ b/packages/support/package.json
@@ -42,6 +42,11 @@
             "types": "./dist/types/objects.d.ts",
             "import": "./dist/esm/objects.js",
             "require": "./dist/cjs/objects.cjs"
+        },
+        "./reflections": {
+            "types": "./dist/types/reflections.d.ts",
+            "import": "./dist/esm/reflections.js",
+            "require": "./dist/cjs/reflections.cjs"
         }
     },
     "files": [
