--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -40,6 +40,11 @@
             "types": "./dist/types/support/meta.d.ts",
             "import": "./dist/esm/support/meta.js",
             "require": "./dist/cjs/support/meta.cjs"
+        },
+        "./support/reflections": {
+            "types": "./dist/types/support/reflections.d.ts",
+            "import": "./dist/esm/support/reflections.js",
+            "require": "./dist/cjs/support/reflections.cjs"
         }
     },
     "files": [
