--- a/package.json
+++ b/package.json
@@ -20,55 +20,55 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.0",
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.7",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.21.0",
+    "@babel/plugin-proposal-decorators": "^7.23.7",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/preset-env": "^7.20.2",
-    "@lerna-lite/changed": "^1.17.0",
-    "@lerna-lite/cli": "^1.17.0",
-    "@lerna-lite/list": "^1.17.0",
-    "@lerna-lite/run": "^1.17.0",
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-replace": "^5.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "@typescript-eslint/parser": "^5.57.0",
-    "@vue/server-renderer": "^3.2.47",
-    "@vuepress/plugin-back-to-top": "2.0.0-beta.61",
-    "@vuepress/plugin-search": "2.0.0-beta.61",
-    "babel-loader": "^9.1.2",
-    "cpx2": "^4.2.2",
+    "@babel/preset-env": "^7.23.8",
+    "@lerna-lite/changed": "^3.2.1",
+    "@lerna-lite/cli": "^3.2.1",
+    "@lerna-lite/list": "^3.2.1",
+    "@lerna-lite/run": "^3.2.1",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^5.0.5",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "@vue/server-renderer": "^3.4.15",
+    "@vuepress/plugin-back-to-top": "^2.0.0-rc.0",
+    "@vuepress/plugin-search": "^2.0.0-rc.0",
+    "babel-loader": "^9.1.3",
+    "cpx2": "^7.0.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.3",
-    "eslint": "^8.37.0",
+    "css-loader": "^6.9.1",
+    "eslint": "^8.56.0",
     "install": "^0.13.0",
-    "jasmine": "^4.5.0",
-    "karma": "^6.4.1",
-    "karma-chrome-launcher": "^3.1.1",
+    "jasmine": "^5.1.0",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "^5.1.0",
     "karma-spec-reporter": "^0.0.36",
     "karma-webpack": "^5.0.0",
-    "npm": "^9.6.2",
-    "nx": "^15.9.2",
-    "prettier": "^2.8.4",
-    "puppeteer": "^19.7.4",
-    "rollup": "^3.18.0",
+    "npm": "^10.4.0",
+    "nx": "^17.2.8",
+    "prettier": "^3.2.4",
+    "puppeteer": "^21.9.0",
+    "rollup": "^4.9.6",
     "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-scss": "^4.0.0",
-    "rollup-plugin-typescript2": "^0.34.1",
+    "rollup-plugin-typescript2": "^0.36.0",
     "rollup-plugin-vue": "^6.0.0",
-    "sass-loader": "^13.2.0",
-    "style-loader": "^3.3.1",
-    "tslib": "^2.5.0",
-    "typescript": "^5.0.2",
-    "vuepress": "2.0.0-beta.61",
-    "webpack": "^5.76.1",
-    "webpack-cli": "^5.0.1"
+    "sass-loader": "^14.0.0",
+    "style-loader": "^3.3.4",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3",
+    "vuepress": "^2.0.0-rc.1",
+    "webpack": "^5.90.0",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
