--- a/packages/vuepress-utils/package.json
+++ b/packages/vuepress-utils/package.json
@@ -52,13 +52,13 @@
     "!dist/**/*.map"
   ],
   "peerDependencies": {
-    "@types/luxon": "^3.2.0",
-    "@vuepress/core": "^2.0.0-beta.61",
-    "@vuepress/utils": "^2.0.0-beta.61",
-    "luxon": "^3.3.0",
-    "tslib": "^2.5.0",
+    "@types/luxon": "^3.4.2",
+    "@vuepress/core": "^2.0.0-rc.1",
+    "@vuepress/utils": "^2.0.0-rc.1",
+    "luxon": "^3.4.4",
+    "tslib": "^2.6.2",
     "vue": "^3.2.47",
-    "vuepress": "^2.0.0-beta.61"
+    "vuepress": "^2.0.0-rc.1"
   },
   "scripts": {
     "compile": "rollup -c && npx cpx \"src/**/*.vue\" dist",
