--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.23.7",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-transform-class-static-block": "^7.23.4",
     "@babel/preset-env": "^7.23.8",
     "@lerna-lite/changed": "^3.2.1",
     "@lerna-lite/cli": "^3.2.1",
